fix(header): fix style issues that James detected on iOS

--- a/src/components/Header/_header.scss
+++ b/src/components/Header/_header.scss
@@ -18,6 +18,7 @@
     display: flex;
     height: $mobile-minimum-clickable-area;
     justify-content: center;
+    padding: 0;
     width: $mobile-minimum-clickable-area;
 
     @include isHeaderDesktop {
