--- a/src/components/Navigation/NavigationItemTrigger/_navigationItemTrigger.scss
+++ b/src/components/Navigation/NavigationItemTrigger/_navigationItemTrigger.scss
@@ -5,6 +5,7 @@
   justify-content: center;
 
   & > button {
+    color: $pure-black;
     display: flex;
     justify-content: flex-start;
     position: relative;
@@ -12,6 +13,7 @@
     width: 100%;
 
     @include isHeaderDesktop {
+      color: unset;
       justify-content: center;
     }
   }
