--- a/src/components/UserManagement/_userManagement.scss
+++ b/src/components/UserManagement/_userManagement.scss
@@ -6,7 +6,12 @@
   display: flex;
   gap: 0 $spacing-xsm;
   justify-content: flex-end;
+  min-height: 42px; // stop bounce after the user is logged in
   min-width: 92px; // needed to handle the loading states and language swapping
+
+  @include media($size-xl) {
+    min-width: 104px; // stop bounce after the user is logged in
+  }
 
   @include isHeaderMobile {
     justify-content: center;
